:construction: Fix build

--- a/Toggl.Droid/Resources/layout/EditProjectActivity.axml
+++ b/Toggl.Droid/Resources/layout/EditProjectActivity.axml
@@ -28,7 +28,7 @@
                 android:textSize="15sp"
                 android:singleLine="true"
                 android:lineSpacingExtra="5sp"
-                android:textColor="@android:color/black"
+                android:textColor="@color/primaryText"
                 tools:text="Some client with a ridiculously big name to help us test fading totally"
                 android:paddingTop="0dp"
                 android:paddingBottom="0dp"
@@ -48,7 +48,7 @@
                 android:layout_below="@+id/ProjectNameTextView"
                 android:layout_alignStart="@+id/ProjectNameTextView" />
             <View
-                android:background="@drawable/TransparentToWhiteGradient"
+                android:background="@drawable/TransparentToBackgroundGradient"
                 android:layout_width="80dp"
                 android:layout_marginRight="40dp"
                 android:layout_height="match_parent"
@@ -100,7 +100,7 @@
                 android:textSize="15sp"
                 android:singleLine="true"
                 android:lineSpacingExtra="5sp"
-                android:textColor="@android:color/black"
+                android:textColor="@color/primaryText"
                 tools:text="Some Workspace with a ridiculously big name to help us test fading"
                 android:layout_marginTop="4dp"
                 android:layout_width="wrap_content"
@@ -109,7 +109,7 @@
                 android:layout_toRightOf="@id/ChangeWorkspaceViewWorkspaceImage"
                 android:layout_marginRight="16dp" />
             <View
-                android:background="@drawable/TransparentToWhiteGradient"
+                android:background="@drawable/TransparentToBackgroundGradient"
                 android:layout_width="64dp"
                 android:layout_height="match_parent"
                 android:layout_alignParentTop="true"
@@ -151,7 +151,7 @@
                 android:textSize="15sp"
                 android:singleLine="true"
                 android:lineSpacingExtra="5sp"
-                android:textColor="@android:color/black"
+                android:textColor="@color/primaryText"
                 tools:text="Some client with a ridiculously big name to help us test fading"
                 android:layout_marginTop="4dp"
                 android:layout_width="wrap_content"
@@ -160,7 +160,7 @@
                 android:layout_toRightOf="@id/ChangeWorkspaceViewClientImage"
                 android:layout_marginRight="16dp" />
             <View
-                android:background="@drawable/TransparentToWhiteGradient"
+                android:background="@drawable/TransparentToBackgroundGradient"
                 android:layout_width="64dp"
                 android:layout_height="match_parent"
                 android:layout_alignParentTop="true"
@@ -204,7 +204,7 @@
                 android:singleLine="true"
                 android:lineSpacingExtra="5sp"
                 tools:text="Private project"
-                android:textColor="@android:color/black"
+                android:textColor="@color/primaryText"
                 android:layout_marginTop="4dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -214,7 +214,7 @@
                 android:id="@+id/PrivateProjectHint"
                 android:textSize="12sp"
                 android:lineSpacingExtra="5sp"
-                android:textColor="@color/defaultText"
+                android:textColor="@color/secondaryText"
                 tools:text="Private projects are only accessible\nto project members"
                 android:layout_marginTop="4dp"
                 android:layout_width="wrap_content"
@@ -242,12 +242,13 @@
         android:layout_marginTop="?attr/actionBarSize" />
     <android.support.v7.widget.Toolbar
         android:id="@+id/Toolbar"
-        android:minHeight="?attr/actionBarSize"
-        android:background="@android:color/white"
-        app:popupTheme="@style/ThemeOverlay.AppCompat.Dark"
-        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
-        android:layout_width="match_parent"
         android:elevation="4dp"
+        android:minHeight="?attr/actionBarSize"
+        android:background="@color/background"
+        app:titleTextColor="@color/primaryText"
+        android:theme="@style/AppBarTheme"
+        app:popupTheme="@style/AppBarPopupTheme"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content">
         <TextView
             android:id="@+id/CreateProjectButton"
@@ -258,7 +259,7 @@
             android:textAllCaps="true"
             android:letterSpacing="0.04"
             tools:text="Create"
-            android:textColor="@android:color/black"
+            android:textColor="@color/primaryText"
             android:fontFamily="sans-serif-medium"
             android:background="?attr/selectableItemBackground"
             android:layout_gravity="end"
