--- a/Toggl.Droid/Resources/layout/EditTimeEntryActivity.axml
+++ b/Toggl.Droid/Resources/layout/EditTimeEntryActivity.axml
@@ -17,10 +17,13 @@
         android:layout_height="wrap_content">
         <FrameLayout
             android:id="@+id/DescriptionContainer"
-            android:layout_width="match_parent"
             android:paddingBottom="16dp"
+            android:background="@color/background"
+            app:titleTextColor="@color/primaryText"
+            android:theme="@style/AppBarTheme"
+            app:popupTheme="@style/AppBarPopupTheme"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@android:color/white"
             android:minHeight="@dimen/expandedToolbarHeight">
             <ImageView
                 android:id="@+id/CloseButton"
@@ -49,7 +52,7 @@
                 android:maxLines="4"
                 android:minLines="1"
                 android:scrollHorizontally="true"
-                android:textColor="@android:color/black"
+                android:textColor="@color/primaryText"
                 android:textColorHint="@color/placeholderText"
                 android:textCursorDrawable="@drawable/EditTextCursor"
                 android:textSize="19sp" />
@@ -64,7 +67,7 @@
                 android:padding="16dp"
                 tools:text="Save"
                 android:textAllCaps="true"
-                android:textColor="@android:color/black"
+                android:textColor="@color/primaryText"
                 android:textSize="14sp" />
       </FrameLayout>
     </android.support.design.widget.AppBarLayout>
@@ -161,7 +164,7 @@
                         android:layout_marginRight="16dp"
                         android:layout_marginBottom="16dp"
                         android:minLines="1"
-                        android:textColor="@color/defaultText"
+                        android:textColor="@color/secondaryText"
                         android:textSize="14sp"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintLeft_toLeftOf="@id/ErrorTitle"
@@ -245,7 +248,7 @@
                 android:gravity="center_vertical|left"
                 android:maxLines="1"
                 android:scrollHorizontally="true"
-                android:textColor="@android:color/black"
+                android:textColor="@color/primaryText"
                 android:textSize="15sp"
                 app:layout_constraintLeft_toRightOf="@id/ProjectIcon"
                 app:layout_constraintRight_toRightOf="parent"
@@ -336,7 +339,7 @@
                 android:layout_weight="1"
                 android:gravity="center_vertical"
                 tools:text="Billable"
-                android:textColor="@color/darkLabel"
+                android:textColor="@color/primaryText"
                 android:textSize="15sp"
                 app:layout_constraintLeft_toRightOf="@id/BillableIcon"
                 app:layout_constraintTop_toTopOf="@+id/BillableIcon" />
@@ -393,7 +396,7 @@
                 android:id="@+id/StartTime"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textColor="@color/darkLabel"
+                android:textColor="@color/primaryText"
                 android:textSize="15sp"
                 android:layout_marginTop="12dp"
                 app:layout_constraintLeft_toRightOf="@id/TimeIcon"
@@ -405,7 +408,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="8dp"
-                android:textColor="@color/editViewDate"
+                android:textColor="@color/primaryText"
                 android:textSize="15sp"
                 app:layout_constraintBaseline_toBaselineOf="@id/StartTime"
                 app:layout_constraintLeft_toRightOf="@id/StartTime"
@@ -417,7 +420,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="4dp"
                 tools:text="Start time"
-                android:textColor="@color/defaultText"
+                android:textColor="@color/secondaryText"
                 android:textSize="12sp"
                 app:layout_constraintLeft_toRightOf="@id/TimeIcon"
                 app:layout_constraintTop_toBottomOf="@id/StartTime"
@@ -440,7 +443,7 @@
                 android:layout_marginLeft="16dp"
                 android:layout_marginTop="16dp"
                 android:layout_weight="1"
-                android:textColor="@color/darkLabel"
+                android:textColor="@color/primaryText"
                 android:textSize="15sp"
                 app:layout_constraintBaseline_toBaselineOf="@id/StartTime"
                 app:layout_constraintLeft_toRightOf="@id/TimeMiddleGuide"
@@ -451,7 +454,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="8dp"
-                android:textColor="@color/editViewDate"
+                android:textColor="@color/primaryText"
                 android:textSize="15sp"
                 app:layout_constraintBaseline_toBaselineOf="@id/StopTime"
                 app:layout_constraintLeft_toRightOf="@id/StopTime"
@@ -462,7 +465,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 tools:text="Stop"
-                android:textColor="@color/buttonBlue"
+                android:textColor="@color/flatButtonText"
                 android:layout_marginLeft="16dp"
                 android:textSize="15sp"
                 app:layout_constraintBaseline_toBaselineOf="@id/StartTime"
@@ -475,7 +478,7 @@
                 android:layout_marginTop="4dp"
                 android:layout_marginLeft="16dp"
                 tools:text="End time"
-                android:textColor="@color/defaultText"
+                android:textColor="@color/secondaryText"
                 android:textSize="12sp"
                 app:layout_constraintTop_toBottomOf="@id/StartTime"
                 app:layout_constraintLeft_toRightOf="@id/TimeMiddleGuide" />
@@ -505,7 +508,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
                 android:background="@android:color/transparent"
-                android:textColor="@color/darkLabel"
+                android:textColor="@color/primaryText"
                 android:textSize="15sp"
                 tools:text="0:11:25"
                 app:layout_constraintTop_toBottomOf="@id/TimeBottomBorder"
@@ -517,7 +520,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="4dp"
                 tools:text="Duration"
-                android:textColor="@color/defaultText"
+                android:textColor="@color/secondaryText"
                 android:textSize="12sp"
                 app:layout_constraintTop_toBottomOf="@id/Duration"
                 app:layout_constraintLeft_toLeftOf="@id/Duration" />
