--- a/Toggl.Droid/Resources/layout/SettingsFragment.axml
+++ b/Toggl.Droid/Resources/layout/SettingsFragment.axml
@@ -23,7 +23,7 @@
                 android:letterSpacing="0.04"
                 android:gravity="center_vertical"
                 tools:text="Your Profile"
-                android:textColor="@color/defaultText"
+                android:textColor="@color/secondaryText"
                 android:fontFamily="sans-serif-medium"
                 android:layout_height="48dp"
                 android:layout_width="match_parent" />
@@ -36,7 +36,7 @@
                   tools:text="heidi@toggl.com"
                   android:textSize="15sp"
                   android:lineSpacingExtra="5sp"
-                  android:textColor="@android:color/black"
+                  android:textColor="@color/primaryText"
                   android:layout_marginTop="8dp"
                   android:layout_marginLeft="16dp"
                   android:layout_width="wrap_content"
@@ -49,7 +49,7 @@
                   android:id="@+id/UsernameLabel"
                   android:textSize="12sp"
                   android:lineSpacingExtra="4sp"
-                  android:textColor="@color/defaultText"
+                  android:textColor="@color/secondaryText"
                   tools:text="Username"
                   android:layout_gravity="bottom"
                   android:layout_marginLeft="16dp"
@@ -70,7 +70,7 @@
                   tools:text="Heidi"
                   android:textSize="15sp"
                   android:lineSpacingExtra="5sp"
-                  android:textColor="@android:color/black"
+                  android:textColor="@color/primaryText"
                   android:layout_marginTop="8dp"
                   android:layout_marginLeft="16dp"
                   android:layout_width="wrap_content"
@@ -80,7 +80,7 @@
                   android:textSize="12sp"
                   android:lineSpacingExtra="4sp"
                   tools:text="Email"
-                  android:textColor="@color/defaultText"
+                  android:textColor="@color/secondaryText"
                   android:layout_gravity="bottom"
                   android:layout_marginLeft="16dp"
                   android:layout_marginBottom="8dp"
@@ -102,7 +102,7 @@
                   tools:text="MM/DD/YYYY"
                   android:textSize="15sp"
                   android:lineSpacingExtra="5sp"
-                  android:textColor="@android:color/black"
+                  android:textColor="@color/primaryText"
                   android:layout_marginTop="8dp"
                   android:layout_marginLeft="16dp"
                   android:layout_width="wrap_content"
@@ -112,7 +112,7 @@
                   android:textSize="12sp"
                   android:lineSpacingExtra="4sp"
                   tools:text="Default Workspace"
-                  android:textColor="@color/defaultText"
+                  android:textColor="@color/secondaryText"
                   android:layout_gravity="bottom"
                   android:layout_marginLeft="16dp"
                   android:layout_marginBottom="8dp"
@@ -137,7 +137,7 @@
                 android:letterSpacing="0.04"
                 android:gravity="center_vertical"
                 tools:text="Display"
-                android:textColor="@color/defaultText"
+                android:textColor="@color/secondaryText"
                 android:fontFamily="sans-serif-medium"
                 android:layout_height="48dp"
                 android:layout_marginTop="24dp"
@@ -157,7 +157,7 @@
                     tools:text="MM/DD/YYYY"
                     android:textSize="15sp"
                     android:lineSpacingExtra="5sp"
-                    android:textColor="@android:color/black"
+                    android:textColor="@color/primaryText"
                     android:layout_marginTop="8dp"
                     android:layout_marginLeft="16dp"
                     android:layout_width="wrap_content"
@@ -167,7 +167,7 @@
                     android:textSize="12sp"
                     android:lineSpacingExtra="4sp"
                     tools:text="Date format"
-                    android:textColor="@color/defaultText"
+                    android:textColor="@color/secondaryText"
                     android:layout_gravity="bottom"
                     android:layout_marginLeft="16dp"
                     android:layout_marginBottom="8dp"
@@ -195,7 +195,7 @@
                     tools:text="Monday"
                     android:textSize="15sp"
                     android:lineSpacingExtra="5sp"
-                    android:textColor="@android:color/black"
+                    android:textColor="@color/primaryText"
                     android:layout_marginTop="8dp"
                     android:layout_marginLeft="16dp"
                     android:layout_width="wrap_content"
@@ -205,7 +205,7 @@
                     android:textSize="12sp"
                     android:lineSpacingExtra="4sp"
                     tools:text="First day of the week"
-                    android:textColor="@color/defaultText"
+                    android:textColor="@color/secondaryText"
                     android:layout_gravity="bottom"
                     android:layout_marginLeft="16dp"
                     android:layout_marginBottom="8dp"
@@ -233,7 +233,7 @@
                     tools:text="Monday"
                     android:textSize="15sp"
                     android:lineSpacingExtra="5sp"
-                    android:textColor="@android:color/black"
+                    android:textColor="@color/primaryText"
                     android:layout_marginTop="8dp"
                     android:layout_marginLeft="16dp"
                     android:layout_width="wrap_content"
@@ -243,7 +243,7 @@
                     android:textSize="12sp"
                     android:lineSpacingExtra="4sp"
                     tools:text="Duration display format"
-                    android:textColor="@color/defaultText"
+                    android:textColor="@color/secondaryText"
                     android:layout_gravity="bottom"
                     android:layout_marginLeft="16dp"
                     android:layout_marginBottom="8dp"
@@ -273,7 +273,7 @@
                     android:paddingLeft="16dp"
                     android:gravity="center_vertical"
                     tools:text="Use 24-hour clock"
-                    android:textColor="@android:color/black"
+                    android:textColor="@color/primaryText"
                     android:layout_gravity="start"
                     android:layout_height="match_parent"
                     android:layout_width="wrap_content" />
@@ -302,7 +302,7 @@
                     android:paddingLeft="16dp"
                     android:gravity="center_vertical"
                     tools:text="Group similar time entries"
-                    android:textColor="@android:color/black"
+                    android:textColor="@color/primaryText"
                     android:layout_gravity="start"
                     android:layout_height="match_parent"
                     android:layout_width="wrap_content" />
@@ -334,7 +334,7 @@
                     android:id="@+id/SettingsToggleManualModeLabel"
                     tools:text="Manual Mode"
                     android:textAllCaps="false"
-                    android:textColor="@android:color/black"
+                    android:textColor="@color/primaryText"
                     android:textSize="15sp"
                     android:lineSpacingExtra="5sp"
                     android:lines="1"
@@ -357,7 +357,7 @@
                 <TextView
                     android:id="@+id/SettingsToggleManualModeExplanation"
                     tools:text="This option sets the default behavior for the start button. Regardless of the current option, long pressing the button will always activate the alternative mode."
-                    android:textColor="@color/defaultText"
+                    android:textColor="@color/secondaryText"
                     android:textSize="12sp"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
@@ -385,7 +385,7 @@
                 android:clickable="true"
                 android:background="?attr/selectableItemBackground"
                 android:textSize="15dp"
-                android:textColor="@android:color/black"
+                android:textColor="@color/primaryText"
                 tools:text="Calendar Settings"/>
             <View
                 android:background="@color/separator"
@@ -404,7 +404,7 @@
                     android:layout_marginTop="8dp"
                     android:layout_marginLeft="16dp"
                     android:lineSpacingExtra="5sp"
-                    android:textColor="@android:color/black"
+                    android:textColor="@color/primaryText"
                     tools:text="5 minutes before the event"/>
                 <TextView
                     android:id="@+id/SmartRemindersLabel"
@@ -415,7 +415,7 @@
                     android:layout_marginLeft="16dp"
                     android:layout_marginBottom="8dp"
                     android:textSize="12sp"
-                    android:textColor="@color/defaultText"
+                    android:textColor="@color/secondaryText"
                     tools:text="Smart reminders"/>
                 <ImageView
                     android:src="@drawable/dropdown"
@@ -438,7 +438,7 @@
                 android:gravity="center_vertical"
                 tools:text="Notifications"
                 android:fontFamily="sans-serif-medium"
-                android:textColor="@color/defaultText"
+                android:textColor="@color/secondaryText"
                 android:layout_height="48dp"
                 android:layout_marginTop="24dp"
                 android:layout_width="match_parent" />
@@ -458,7 +458,7 @@
                     android:paddingLeft="16dp"
                     android:textAllCaps="false"
                     android:gravity="center_vertical"
-                    android:textColor="@android:color/black"
+                    android:textColor="@color/primaryText"
                     tools:text="Running timer"
                     android:layout_gravity="start"
                     android:layout_width="wrap_content"
@@ -487,7 +487,7 @@
                     android:textAllCaps="false"
                     android:lineSpacingExtra="5sp"
                     android:gravity="center_vertical"
-                    android:textColor="@android:color/black"
+                    android:textColor="@color/primaryText"
                     tools:text="Stopped timer"
                     android:layout_marginLeft="16dp"
                     android:layout_width="wrap_content"
@@ -513,7 +513,7 @@
                 tools:text="General"
                 android:gravity="center_vertical"
                 android:fontFamily="sans-serif-medium"
-                android:textColor="@color/defaultText"
+                android:textColor="@color/secondaryText"
                 android:layout_height="48dp"
                 android:layout_marginTop="24dp"
                 android:layout_width="match_parent" />
@@ -529,7 +529,7 @@
                 android:paddingLeft="16dp"
                 android:gravity="center_vertical"
                 tools:text="Submit feedback"
-                android:textColor="@android:color/black"
+                android:textColor="@color/primaryText"
                 android:background="?attr/selectableItemBackground"
                 android:layout_height="48dp"
                 android:layout_width="match_parent" />
@@ -545,7 +545,7 @@
                 android:paddingLeft="16dp"
                 tools:text="Help"
                 android:gravity="center_vertical"
-                android:textColor="@android:color/black"
+                android:textColor="@color/primaryText"
                 android:background="?attr/selectableItemBackground"
                 android:layout_height="48dp"
                 android:layout_width="match_parent" />
@@ -566,7 +566,7 @@
                     android:paddingLeft="16dp"
                     tools:text="About"
                     android:gravity="center_vertical"
-                    android:textColor="@android:color/black"
+                    android:textColor="@color/primaryText"
                     android:layout_gravity="start"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent" />
@@ -575,7 +575,7 @@
                     android:textSize="15sp"
                     android:paddingRight="16dp"
                     android:gravity="center_vertical"
-                    android:textColor="@color/defaultText"
+                    android:textColor="@color/secondaryText"
                     android:layout_gravity="end"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent" />
@@ -611,8 +611,8 @@
       <android.support.v7.widget.Toolbar
           android:id="@+id/Toolbar"
           android:minHeight="?attr/actionBarSize"
-          android:background="@color/defaultBackground"
-          app:titleTextColor="@android:color/black"
+          android:background="@color/background"
+          app:titleTextColor="@color/primaryText"
           app:layout_scrollFlags="scroll|enterAlways"
           app:popupTheme="@style/ThemeOverlay.AppCompat.Dark"
           android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
