--- a/Toggl.Droid/Resources/layout/CalendarPermissionDeniedFragment.axml
+++ b/Toggl.Droid/Resources/layout/CalendarPermissionDeniedFragment.axml
@@ -29,7 +29,7 @@
         android:textSize="20sp"
         android:fontFamily="sans-serif-medium"
         android:textStyle="normal"
-        android:textColor="@android:color/black"
+        android:textColor="@color/primaryText"
         tools:text="No worries"/>
     <TextView
         android:id="@+id/Message"
@@ -47,7 +47,7 @@
         android:textSize="16sp"
         android:fontFamily="sans-serif"
         android:textStyle="normal"
-        android:textColor="@android:color/black"
+        android:textColor="@color/primaryText"
         android:letterSpacing="0.01"
         android:lineSpacingExtra="8sp"
         tools:text="Toggl needs access to your calendar to display events. You can enable this later."/>
@@ -67,7 +67,7 @@
         android:textSize="14sp"
         android:fontFamily="sans-serif-medium"
         android:textStyle="normal"
-        android:textColor="@color/buttonBlue"
+        android:textColor="@color/flatButtonText"
         android:letterSpacing="0.04"
         android:lineSpacingExtra="2sp"
         android:textAllCaps="false"
@@ -84,7 +84,7 @@
         android:textSize="14sp"
         android:fontFamily="sans-serif-medium"
         android:textStyle="normal"
-        android:textColor="@color/buttonBlue"
+        android:textColor="@color/flatButtonText"
         android:letterSpacing="0.04"
         android:lineSpacingExtra="2sp"
         android:textAllCaps="false"
