--- a/Toggl.Droid/Resources/layout/ForgotPasswordActivity.axml
+++ b/Toggl.Droid/Resources/layout/ForgotPasswordActivity.axml
@@ -9,10 +9,13 @@
     <android.support.v7.widget.Toolbar
         android:id="@+id/Toolbar"
         android:elevation="0dp"
+        android:background="@color/background"
+        app:titleTextColor="@color/primaryText"
+        android:theme="@style/AppBarTheme"
+        app:popupTheme="@style/AppBarPopupTheme"
         android:minHeight="?attr/actionBarSize"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        style="@style/AppTheme.TransparentActionBar" />
+        android:layout_height="wrap_content" />
     <android.support.design.widget.TextInputLayout
         android:id="@+id/LoginEmail"
         app:helperTextTextAppearance="@style/TextInputLayoutRegularTextAppearance"
@@ -33,7 +36,7 @@
         </EditText>
     </android.support.design.widget.TextInputLayout>
     <FrameLayout
-        android:background="@color/buttonBlue"
+        android:background="@color/flatButtonText"
         android:layout_height="36dp"
         android:layout_marginTop="24dp"
         android:layout_marginLeft="24dp"
@@ -44,7 +47,6 @@
             android:id="@+id/ResetPasswordButton"
             android:layout_height="36dp"
             android:layout_width="match_parent"
-            android:background="@color/buttonBlue"
             tools:text="Get Password Reset Link"
             android:textColor="@color/BlueButtonTextColor"
             android:foreground="?attr/selectableItemBackground" />
