--- a/Toggl.Droid/Resources/layout/MainLogEmptyView.axml
+++ b/Toggl.Droid/Resources/layout/MainLogEmptyView.axml
@@ -2,12 +2,12 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
-    android:background="@color/defaultBackground"
+    android:background="@color/background"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
     <LinearLayout
         android:orientation="vertical"
-        android:background="@color/defaultBackground"
+        android:background="@color/background"
         android:layout_marginTop="18dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
@@ -71,7 +71,7 @@
                 android:layout_width="match_parent" />
             <LinearLayout
                 android:orientation="vertical"
-                android:background="@android:color/white"
+                android:background="@color/card"
                 android:layout_height="70dp"
                 android:layout_width="match_parent">
                 <View
@@ -95,7 +95,7 @@
                 android:layout_width="match_parent" />
             <LinearLayout
                 android:orientation="vertical"
-                android:background="@android:color/white"
+                android:background="@color/card"
                 android:layout_height="70dp"
                 android:layout_width="match_parent">
                 <View
@@ -130,7 +130,7 @@
                 android:layout_width="match_parent" />
             <LinearLayout
                 android:orientation="vertical"
-                android:background="@android:color/white"
+                android:background="@color/card"
                 android:layout_height="70dp"
                 android:layout_width="match_parent">
                 <View
