--- a/Toggl.Droid/Resources/layout/MainSuggestionsCard.axml
+++ b/Toggl.Droid/Resources/layout/MainSuggestionsCard.axml
@@ -19,7 +19,7 @@
             android:id="@+id/DescriptionLabel"
             android:maxLines="1"
             android:textSize="15sp"
-            android:textColor="@android:color/black"
+            android:textColor="@color/primaryText"
             tools:text="Exporting assets to Zeplin and organizing"
             android:layout_marginLeft="16dp"
             app:layout_constraintTop_toTopOf="parent"
@@ -57,7 +57,7 @@
             app:layout_constraintLeft_toRightOf="@id/ProjectLabel"
             />
         <View
-            android:background="@drawable/TransparentToWhiteGradient"
+            android:background="@drawable/TransparentToCardColorGradient"
             app:layout_constraintRight_toRightOf="parent"
             android:layout_width="68dp"
             android:layout_height="match_parent" />
