--- a/Toggl.Droid/Resources/layout/OutdatedAppActivity.axml
+++ b/Toggl.Droid/Resources/layout/OutdatedAppActivity.axml
@@ -8,7 +8,7 @@
     android:layout_height="match_parent">
     <android.support.v7.widget.CardView
         app:cardUseCompatPadding="true"
-        android:background="@android:color/white"
+        android:background="@color/card"
         android:layout_gravity="center"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content">
@@ -25,7 +25,7 @@
                 android:textSize="20sp"
                 tools:text="Oops!"
                 android:fontFamily="sans-serif-medium"
-                android:textColor="@android:color/black"
+                android:textColor="@color/primaryText"
                 android:layout_marginTop="140dp"
                 android:layout_marginLeft="24dp"
                 android:layout_width="wrap_content"
