--- a/Toggl.Droid/Resources/layout/ReportsCalendarView.axml
+++ b/Toggl.Droid/Resources/layout/ReportsCalendarView.axml
@@ -14,7 +14,7 @@
             android:textSize="14sp"
             android:gravity="center_horizontal"
             android:fontFamily="sans-serif-medium"
-            android:textColor="@android:color/black"
+            android:textColor="@color/primaryText"
             android:layout_height="20dp"
             android:layout_marginTop="8dp"
             android:layout_marginBottom="17dp"
@@ -29,7 +29,7 @@
                 android:textSize="14sp"
                 android:gravity="center"
                 android:fontFamily="sans-serif-medium"
-                android:textColor="@android:color/black"
+                android:textColor="@color/primaryText"
                 android:layout_weight="1"
                 android:layout_width="0dp"
                 android:layout_height="match_parent" />
@@ -37,7 +37,7 @@
                 android:textSize="14sp"
                 android:gravity="center"
                 android:fontFamily="sans-serif-medium"
-                android:textColor="@android:color/black"
+                android:textColor="@color/primaryText"
                 android:layout_weight="1"
                 android:layout_width="0dp"
                 android:layout_height="match_parent" />
@@ -45,7 +45,7 @@
                 android:textSize="14sp"
                 android:gravity="center"
                 android:fontFamily="sans-serif-medium"
-                android:textColor="@android:color/black"
+                android:textColor="@color/primaryText"
                 android:layout_weight="1"
                 android:layout_width="0dp"
                 android:layout_height="match_parent" />
@@ -53,7 +53,7 @@
                 android:textSize="14sp"
                 android:gravity="center"
                 android:fontFamily="sans-serif-medium"
-                android:textColor="@android:color/black"
+                android:textColor="@color/primaryText"
                 android:layout_weight="1"
                 android:layout_width="0dp"
                 android:layout_height="match_parent" />
@@ -61,7 +61,7 @@
                 android:textSize="14sp"
                 android:gravity="center"
                 android:fontFamily="sans-serif-medium"
-                android:textColor="@android:color/black"
+                android:textColor="@color/primaryText"
                 android:layout_weight="1"
                 android:layout_width="0dp"
                 android:layout_height="match_parent" />
@@ -69,7 +69,7 @@
                 android:textSize="14sp"
                 android:gravity="center"
                 android:fontFamily="sans-serif-medium"
-                android:textColor="@android:color/black"
+                android:textColor="@color/primaryText"
                 android:layout_weight="1"
                 android:layout_width="0dp"
                 android:layout_height="match_parent" />
@@ -77,7 +77,7 @@
                 android:textSize="14sp"
                 android:gravity="center"
                 android:fontFamily="sans-serif-medium"
-                android:textColor="@android:color/black"
+                android:textColor="@color/primaryText"
                 android:layout_weight="1"
                 android:layout_width="0dp"
                 android:layout_height="match_parent" />
