--- a/Toggl.Droid/Resources/layout/ReportsFragmentHeader.axml
+++ b/Toggl.Droid/Resources/layout/ReportsFragmentHeader.axml
@@ -9,7 +9,6 @@
     <android.support.v7.widget.CardView
         android:id="@+id/SummaryCard"
         android:elevation="2dp"
-        app:cardBackgroundColor="@android:color/white"
         android:minHeight="114dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
@@ -32,7 +31,7 @@
                 tools:text="Total"
                 android:letterSpacing="0.04"
                 android:fontFamily="sans-serif-medium"
-                android:textColor="@color/reportsLabelColor"
+                android:textColor="@color/reportsLabel"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintLeft_toLeftOf="parent"
                 android:layout_marginTop="16dp"
@@ -67,7 +66,7 @@
                 android:letterSpacing="0.04"
                 tools:text="Billable"
                 android:fontFamily="sans-serif-medium"
-                android:textColor="@color/reportsLabelColor"
+                android:textColor="@color/reportsLabel"
                 android:layout_marginTop="16dp"
                 android:layout_marginLeft="8dp"
                 android:layout_width="wrap_content"
@@ -109,7 +108,6 @@
         <android.support.v7.widget.CardView
             android:id="@+id/BarChartCard"
             android:elevation="2dp"
-            app:cardBackgroundColor="@android:color/white"
             android:layout_marginLeft="16dp"
             android:layout_marginRight="16dp"
             android:layout_marginBottom="24dp"
@@ -138,7 +136,7 @@
                 <ImageView
                     android:id="@+id/BillableDot"
                     android:src="@drawable/Dot"
-                    android:tint="@color/billableColor"
+                    android:tint="@color/billable"
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintBottom_toTopOf="@id/BarChartView"
                     app:layout_constraintLeft_toRightOf="@id/ClockedHours"
@@ -161,7 +159,7 @@
                 <ImageView
                     android:id="@+id/NonBillableDot"
                     android:src="@drawable/Dot"
-                    android:tint="@color/nonBillableColor"
+                    android:tint="@color/nonBillable"
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintBottom_toTopOf="@id/BarChartView"
                     app:layout_constraintLeft_toRightOf="@id/BillableText"
@@ -236,7 +234,7 @@
                 android:lineSpacingExtra="4sp"
                 android:fontFamily="sans-serif"
                 tools:text="Nothing here"
-                android:textColor="@android:color/black"
+                android:textColor="@color/primaryText"
                 android:layout_marginBottom="6dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
@@ -248,7 +246,7 @@
                 android:lineSpacingExtra="5sp"
                 android:fontFamily="sans-serif"
                 tools:text="You have no time entries\nfor selected time period."
-                android:textColor="@color/defaultText"
+                android:textColor="@color/secondaryText"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
         </LinearLayout>
