--- a/Toggl.Droid/Resources/layout/SelectCountryActivityCountryCell.axml
+++ b/Toggl.Droid/Resources/layout/SelectCountryActivityCountryCell.axml
@@ -2,7 +2,7 @@
 <RelativeLayout xmlns:tools="http://schemas.android.com/tools"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:elevation="1dp"
-    android:background="@android:color/white"
+    android:background="@color/card"
     android:layout_height="48dp"
     android:layout_width="match_parent">
     <TextView
