--- a/Toggl.Droid/Resources/layout/SelectDateFormatFragment.axml
+++ b/Toggl.Droid/Resources/layout/SelectDateFormatFragment.axml
@@ -11,7 +11,7 @@
         android:lineSpacingExtra="8sp"
         tools:text="Date format"
         android:fontFamily="sans-serif-medium"
-        android:textColor="@android:color/black"
+        android:textColor="@color/primaryText"
         android:layout_margin="24dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
