--- a/Toggl.Droid/Resources/layout/SelectDateFormatFragmentCell.axml
+++ b/Toggl.Droid/Resources/layout/SelectDateFormatFragmentCell.axml
@@ -18,7 +18,7 @@
         tools:text="MM/DD/YYYY"
         android:textSize="15sp"
         android:lineSpacingExtra="5sp"
-        android:textColor="@android:color/black"
+        android:textColor="@color/primaryText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 </LinearLayout>
