--- a/Toggl.Droid/Resources/layout/SelectDefaultWorkspaceFragment.axml
+++ b/Toggl.Droid/Resources/layout/SelectDefaultWorkspaceFragment.axml
@@ -10,7 +10,7 @@
         android:layout_height="wrap_content"
         tools:text="Set default workspace"
         android:fontFamily="sans-serif-medium"
-        android:textColor="@android:color/black"
+        android:textColor="@color/primaryText"
         android:textSize="20sp"
         android:letterSpacing="0"
         android:layout_marginTop="24dp"
@@ -20,7 +20,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         tools:text="Your time will be tracked automatically from this workspace. You can cange this later from the Settings."
-        android:textColor="@android:color/black"
+        android:textColor="@color/primaryText"
         android:textSize="16sp"
         android:letterSpacing="0.01"
         android:lineSpacingExtra="8sp"
