--- a/Toggl.Droid/Resources/layout/SelectDurationFormatFragment.axml
+++ b/Toggl.Droid/Resources/layout/SelectDurationFormatFragment.axml
@@ -12,7 +12,7 @@
         android:gravity="center_vertical"
         tools:text="Duration display format"
         android:fontFamily="sans-serif-medium"
-        android:textColor="@android:color/black"
+        android:textColor="@color/primaryText"
         android:layout_height="76dp"
         android:layout_marginLeft="24dp"
         android:layout_width="wrap_content" />
