--- a/Toggl.Droid/Resources/layout/SignUpActivity.axml
+++ b/Toggl.Droid/Resources/layout/SignUpActivity.axml
@@ -41,7 +41,7 @@
                     android:textStyle="normal"
                     android:lineSpacingExtra="3sp"
                     android:fontFamily="sans-serif"
-                    android:textColor="@color/defaultText"
+                    android:textColor="@color/secondaryText"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_centerHorizontal="true" />
@@ -107,7 +107,7 @@
             <Button
                 android:id="@+id/SignUpButton"
                 tools:text="Sign up for free"
-                android:background="@color/buttonBlue"
+                android:background="@color/raisedButtonBackground"
                 android:textColor="@color/BlueButtonTextColor"
                 android:foreground="?attr/selectableItemBackground"
                 android:layout_height="36dp"
@@ -159,7 +159,7 @@
                 android:elevation="2dp"
                 android:gravity="center"
                 android:orientation="horizontal"
-                android:background="@android:color/white"
+                android:background="@color/card"
                 android:layout_height="36dp"
                 android:layout_marginLeft="24dp"
                 android:layout_marginRight="24dp"
@@ -194,7 +194,7 @@
         android:layout_marginBottom="-8dp"
         android:layout_width="match_parent">
         <android.support.constraint.ConstraintLayout
-            android:background="@android:color/white"
+            android:background="@color/card"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
             <TextView
@@ -204,7 +204,7 @@
                 android:letterSpacing="-0.02"
                 android:lineSpacingExtra="4sp"
                 android:fontFamily="sans-serif-medium"
-                android:textColor="@android:color/black"
+                android:textColor="@color/primaryText"
                 app:layout_constraintTop_toTopOf="parent"
                 tools:text="Already have an account?"
                 app:layout_constraintLeft_toLeftOf="parent"
@@ -221,7 +221,7 @@
                 tools:text="Log In"
                 android:letterSpacing="-0.02"
                 android:lineSpacingExtra="4sp"
-                android:textColor="@color/buttonBlue"
+                android:textColor="@color/flatButtonText"
                 android:fontFamily="sans-serif-medium"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintLeft_toLeftOf="@id/AlreadyHaveAnAccountLabel"
