--- a/Toggl.Droid/Resources/layout/StartTimeEntryActivityTagCell.axml
+++ b/Toggl.Droid/Resources/layout/StartTimeEntryActivityTagCell.axml
@@ -13,14 +13,14 @@
         android:gravity="left"
         android:textSize="15sp"
         android:fontFamily="sans-serif-medium"
-        android:textColor="@color/defaultText"
+        android:textColor="@color/secondaryText"
         tools:text="Some ridiculously long tag name meant to test how fading works"
         android:layout_marginLeft="16dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_vertical|left" />
     <View
-        android:background="@drawable/TransparentToWhiteGradient"
+        android:background="@drawable/TransparentToCardColorGradient"
         android:layout_width="40dp"
         android:layout_gravity="right"
         android:layout_height="match_parent" />
