--- a/Toggl.Droid/Resources/layout/TermsOfServiceFragment.axml
+++ b/Toggl.Droid/Resources/layout/TermsOfServiceFragment.axml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:tools="http://schemas.android.com/tools"
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:background="@android:color/white"
+    android:background="@color/card"
     android:layout_width="312dp"
     android:layout_height="320dp">
     <ImageView
@@ -15,7 +15,7 @@
         android:textSize="20sp"
         tools:text="Review the Terms"
         android:fontFamily="sans-serif-medium"
-        android:textColor="@android:color/black"
+        android:textColor="@color/primaryText"
         android:layout_marginTop="110dp"
         android:layout_marginLeft="24dp"
         android:layout_width="wrap_content"
