--- a/Toggl.Droid/Resources/layout/UpcomingEventsNotificationSettingsFragment.axml
+++ b/Toggl.Droid/Resources/layout/UpcomingEventsNotificationSettingsFragment.axml
@@ -15,7 +15,7 @@
         android:textSize="20sp"
         android:fontFamily="sans-serif-medium"
         android:textStyle="normal"
-        android:textColor="@android:color/black"
+        android:textColor="@color/primaryText"
         android:lineSpacingExtra="8sp"
         tools:text="Set smart reminders"/>
     <TextView
@@ -28,7 +28,7 @@
         android:textSize="16sp"
         android:fontFamily="sans-serif"
         android:textStyle="normal"
-        android:textColor="@android:color/black"
+        android:textColor="@color/primaryText"
         android:letterSpacing="0.01"
         android:lineSpacingExtra="8sp"
         tools:text="Get an actionable reminder to start tracking time for your event"/>
