--- a/Toggl.Droid/Resources/layout/ReportsFragmentHeader.axml
+++ b/Toggl.Droid/Resources/layout/ReportsFragmentHeader.axml
@@ -10,6 +10,7 @@
         android:id="@+id/SummaryCard"
         android:elevation="2dp"
         android:minHeight="114dp"
+        app:cardBackgroundColor="@color/card"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:layout_marginLeft="16dp"
@@ -107,6 +108,7 @@
         android:layout_height="wrap_content">
         <android.support.v7.widget.CardView
             android:id="@+id/BarChartCard"
+            app:cardBackgroundColor="@color/card"
             android:elevation="2dp"
             android:layout_marginLeft="16dp"
             android:layout_marginRight="16dp"
@@ -196,6 +198,7 @@
         </android.support.v7.widget.CardView>
         <android.support.v7.widget.CardView
             android:id="@+id/PieChartCard"
+            app:cardBackgroundColor="@color/card"
             android:elevation="2dp"
             android:layout_marginLeft="16dp"
             android:layout_marginRight="16dp"
