--- a/Toggl.Droid/Resources/layout/LoginActivity.axml
+++ b/Toggl.Droid/Resources/layout/LoginActivity.axml
@@ -168,6 +168,7 @@
     </ScrollView>
     <android.support.v7.widget.CardView
         android:id="@+id/LoginSignupCardView"
+        app:cardBackgroundColor="@color/card"
         app:cardCornerRadius="8dp"
         android:layout_height="80dp"
         android:layout_gravity="bottom"
@@ -176,7 +177,6 @@
         android:layout_marginBottom="-8dp"
         android:layout_width="match_parent">
         <android.support.constraint.ConstraintLayout
-            android:background="@color/card"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
             <TextView
