--- a/Toggl.Droid/Resources/layout/MainSuggestionsCard.axml
+++ b/Toggl.Droid/Resources/layout/MainSuggestionsCard.axml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:android="http://schemas.android.com/apk/res/android"
     app:cardUseCompatPadding="true"
+    app:cardBackgroundColor="@color/card"
     android:layout_height="64dp"
     android:layout_width="match_parent"
     android:foreground="?attr/selectableItemBackground">
