--- a/Toggl.Droid/Resources/layout/OutdatedAppActivity.axml
+++ b/Toggl.Droid/Resources/layout/OutdatedAppActivity.axml
@@ -8,7 +8,7 @@
     android:layout_height="match_parent">
     <android.support.v7.widget.CardView
         app:cardUseCompatPadding="true"
-        android:background="@color/card"
+        app:cardBackgroundColor="@color/card"
         android:layout_gravity="center"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content">
