--- a/Toggl.Droid/Resources/layout/SignUpActivity.axml
+++ b/Toggl.Droid/Resources/layout/SignUpActivity.axml
@@ -187,6 +187,7 @@
     <android.support.v7.widget.CardView
         android:id="@+id/LoginSignupCardView"
         app:cardCornerRadius="8dp"
+        app:cardBackgroundColor="@color/card"
         android:layout_height="80dp"
         android:layout_gravity="bottom"
         android:layout_marginLeft="24dp"
@@ -194,7 +195,6 @@
         android:layout_marginBottom="-8dp"
         android:layout_width="match_parent">
         <android.support.constraint.ConstraintLayout
-            android:background="@color/card"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
             <TextView
