:small_blue_diamond: Modal colors

--- a/Toggl.Droid/Resources/layout/NoWorkspaceFragment.axml
+++ b/Toggl.Droid/Resources/layout/NoWorkspaceFragment.axml
@@ -6,7 +6,7 @@
     android:orientation="vertical"
     android:gravity="center_horizontal"
     android:animateLayoutChanges="true"
-    android:background="@color/background"
+    android:background="@color/card"
     android:layout_width="280dp"
     android:layout_height="match_parent">
     <ImageView
