--- a/Toggl.Droid/Resources/layout/MainRunningTimeEntry.axml
+++ b/Toggl.Droid/Resources/layout/MainRunningTimeEntry.axml
@@ -25,7 +25,7 @@
         android:textSize="15sp"
         android:singleLine="true"
         android:fontFamily="sans-serif"
-        android:textColor="@color/runningEntryDescription"
+        android:textColor="@color/primaryText"
         app:layout_constraintHorizontal_bias="0"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintHorizontal_chainStyle="packed"
@@ -40,7 +40,7 @@
         tools:text="A nice description"
         android:singleLine="true"
         android:fontFamily="sans-serif"
-        android:textColor="@color/runningEntryDescription"
+        android:textColor="@color/primaryText"
         app:layout_constraintLeft_toRightOf="@id/LeadingTextView"
         app:layout_constraintBaseline_toBaselineOf="@id/LeadingTextView"
         app:layout_constraintRight_toLeftOf="@+id/MainRunningTimeEntryAddDescriptionLabel"
