--- a/Toggl.Droid/Resources/layout/MainLogCell.axml
+++ b/Toggl.Droid/Resources/layout/MainLogCell.axml
@@ -162,7 +162,7 @@
             android:gravity="end"
             android:textSize="15sp"
             android:fontFamily="sans-serif"
-            android:textColor="@color/clientName"
+            android:textColor="@color/timerPageDurationText"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintVertical_chainStyle="packed"
